// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render sign up page correctly 1`] = `
<div
  className="register-form"
>
  <h1
    className="header"
  >
    Create Your Account
  </h1>
  <div
    className="form"
  >
    <div
      className="field"
    >
      <label>
        First Name
      </label>
      <input
        className="input-field first"
        name="first"
        value="luna"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Last Name
      </label>
      <input
        className="input-field last"
        name="last"
        value="Liu"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Username
      </label>
      <input
        className="input-field username"
        name="username"
        value="luna"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Email
      </label>
      <input
        className="input-field email"
        name="email"
        value="luna@gmail.com"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Password
      </label>
      <input
        className="input-field password"
        name="password"
        type="password"
        value="luna"
      />
    </div>
    <button
      className="register-button btn btn-primary"
      disabled={false}
      type="button"
    >
      SIGN UP
    </button>
  </div>
</div>
`;

exports[`test sign up 1`] = `
<div
  className="register-form"
>
  <h1
    className="header"
  >
    Create Your Account
  </h1>
  <div
    className="form"
  >
    <div
      className="field"
    >
      <label>
        First Name
      </label>
      <input
        className="input-field first"
        name="first"
        value="luna"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Last Name
      </label>
      <input
        className="input-field last"
        name="last"
        value="Liu"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Username
      </label>
      <input
        className="input-field username"
        name="username"
        value="luna"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Email
      </label>
      <input
        className="input-field email"
        name="email"
        value="luna@gmail.com"
      />
    </div>
    <div
      className="field"
    >
      <label>
        Password
      </label>
      <input
        className="input-field password"
        name="password"
        type="password"
        value="luna"
      />
    </div>
    <button
      className="register-button btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      SIGN UP
    </button>
  </div>
</div>
`;
